[project]
name = "langgraph-agent-testing"
version = "0.1.0"
description = "Graph-native testing, observability, and deployment of a LangGraph expense report processing agent"
requires-python = ">=3.11"

dependencies = [
    "langgraph>=1.1.9",
    "langchain-openai>=0.1.0",
    "langsmith>=0.1.0",
    "python-dotenv>=1.0.0",
    "langgraph-sdk>=0.3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
